--- a/res/css/layouts/footer.css
+++ b/res/css/layouts/footer.css
@@ -34,7 +34,8 @@
     width: 50px;
 }
 #footer .logo img {
-    width: 100%;
+    width: 50px;
+    height: 50px;
 }
 #footer .copyright {
     grid-area: copyright;
