--- a/res/css/layouts/navbar.css
+++ b/res/css/layouts/navbar.css
@@ -9,7 +9,8 @@ nav {
     padding: 15px 25px;
 }
 nav img {
-    height: 100%;
+    height: 40px;
+    width: 40px;
 }
 nav ul {
     display: flex;
