add view more button

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -6,6 +6,7 @@
 
 @import url('./layouts/navbar.css');
 @import url('./layouts/search_section.css');
+@import url('./layouts/visualizer.css');
 @import url('./layouts/catalog_section.css');
 @import url('./layouts/faq_section.css');
 @import url('./layouts/footer.css');
