--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,9 @@ html,body {
                 display: flex;
                 flex-direction: column-reverse;
             }
+            .grid_parent {
+                max-height: calc(100vh - 100px - 57px - 8px - 8px);
+            }
         }
     }
 }
